--- a/index.html
+++ b/index.html
@@ -295,7 +295,10 @@ Machine Learning, proficient in coding, and motivated to learn new things..</p>
               </div>
               <div class="info">
                 <h3>Address</h3>
-                <span>Kizhakkepat House, Kottapuram POST, Palakkad Dist, Kerala, 679513</span>
+                <span>‘KRITHI’, 21-746(5)
+Rose Garden Road, opposite Videon Industries, Kachery, Nadathara, Thrissur, Kerala
+
+PIN Code: 680751</span>
               </div>
             </div>
             <div class="card reveal">
@@ -304,7 +307,7 @@ Machine Learning, proficient in coding, and motivated to learn new things..</p>
               </div>
               <div class="info">
                 <h3>Phone</h3>
-                <span>+91-7012641994</span>
+                <span>+91-8129444073</span>
               </div>
             </div>
             <div class="card reveal">
@@ -313,7 +316,7 @@ Machine Learning, proficient in coding, and motivated to learn new things..</p>
               </div>
               <div class="info">
                 <h3>Email Address</h3>
-                <span>kabhishekmenon@gmail.com</span>
+                <span>kaladharanlal@gmail.com</span>
               </div>
             </div>
             <div class="card reveal">
