major updates in some descriptions

--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
             </div>
             <div class="column col-right reveal">
                 <h2 class="content-title" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="200">Hey There! I am Kaladharan Lal</h2>
-                <p class="paragraph-text" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="400">Electronics and Communication Engineering student with a passion for Embedded Systems ,Analog Circuits and
-Machine Learning, proficient in coding, and motivated to learn new things..</p>
+                <p class="paragraph-text" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="400">Electrical and Electronics Engineering student with a passion for IOT & Embedded Systems , Game Dev, Web Dev, etc with passion for tinkering new ideas</p>
                 <a href="#works" class="btn" data-aos="zoom-out-left" data-aos-duration="1000" data-aos-delay="600">See more</a>
             </div>
         </div>
@@ -95,7 +94,7 @@ Machine Learning, proficient in coding, and motivated to learn new things..</p>
         <div class="content">
             <div class="column col-left">
                 <h2 class="content-title" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="200">My Skills and Experiences</h2>
-                <div class="paragraph-text" data-aos="flip-down" data-aos-duration="1000" data-aos-delay="300">With a strong foundation in both front-end and back-end development, I’ve worked on a range of projects that highlight my ability to design responsive interfaces and develop robust application logic. My skill set includes HTML, CSS, JavaScript, and frameworks like React, along with backend technologies such as Node.js and Python. Over the past few years, I’ve gained hands-on experience collaborating in cross-functional teams, debugging complex code, and optimizing web performance. I’m always eager to learn new technologies and take on challenges that push my creative and technical boundaries.</div>
+                <div class="paragraph-text" data-aos="flip-down" data-aos-duration="1000" data-aos-delay="300">I am a dedicated Electronics and Electrical Engineering student with hands-on experience in both software development and hardware systems. I’ve built a variety of projects — including Python utilities (like ASCII image generation), dynamic web and game experiences (2D games, interactive simulations), embedded systems with Arduino and ESP32, and experimental modules in PCB design and sensors. My GitHub showcases a blend of creative programming (Python, HTML/CSS/JS) and practical engineering solutions, reflecting a strong foundation in electronics, microcontrollers, and full-stack problem solving. As an active leader in technical societies like ISTE and IETE at NSSCE, I’ve honed teamwork, project direction, and community engagement — driving initiatives and collaborating on multidisciplinary challenges.</div>
                 <a href="#" class="btn" data-aos="zoom-in-right" data-aos-duration="1000" data-aos-delay="400">See more</a>
             </div>
             <div class="column col-right">
@@ -127,13 +126,6 @@ Machine Learning, proficient in coding, and motivated to learn new things..</p>
                     </div>
                     <div class="line python" data-aos="zoom-in-right" data-aos-duration="1000" data-aos-delay="440"></div>
                 </div>
-                <div class="bar">
-                    <div class="info" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="500">
-                        <span>PHP</span>
-                        <span>65%</span>
-                    </div>
-                    <div class="line php" data-aos="zoom-in-right" data-aos-duration="1000" data-aos-delay="540"></div>
-                </div>
             </div>
         </div>
     </section>
@@ -159,7 +151,7 @@ Machine Learning, proficient in coding, and motivated to learn new things..</p>
     <section class="services" id="services">
         <div class="title">
             <h2 class="section-title" data-aos="fade-up" data-aos-duration="1000">Positions</h2>
-            <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">Over the years, I have taken up multiple roles including Frontend Developer, Embedded Systems Engineer, and Research Assistant, each of which helped me build a diverse skill set. In these positions, I’ve gained practical experience in web development using HTML, CSS, and JavaScript, as well as hands-on exposure to microcontroller programming, circuit design, and simulation tools like CST and Proteus. Leading project teams and collaborating with peers has strengthened my communication and problem-solving skills, while working under tight deadlines has taught me the importance of efficiency and adaptability. I’m always driven to explore new tools and technologies that enhance both my creativity and technical capability.
+            <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">I currently serve as the Team Head of ISTE Student Branch, NSS College of Engineering, and as the Vice Chair of IETE Student Forum, NSSCE, where I actively lead and coordinate technical activities, workshops, and student initiatives. In these roles, I work closely with faculty, industry professionals, and student teams to plan events, manage execution, and encourage hands-on learning in electronics and emerging technologies. These leadership positions have strengthened my skills in team management, technical coordination, communication, and decision-making, while allowing me to contribute meaningfully to the technical growth of the student community.
 
 </p>
         </div>
@@ -325,7 +317,7 @@ PIN Code: 680751</span>
               </div>
               <div class="info">
                 <h3>Website</h3>
-                <span>mywebsite.com</span>
+                <span>https://kaladharanlal.github.io/My-Portfolio-website/</span>
               </div>
             </div>
           </div>
