--- a/index.html
+++ b/index.html
@@ -212,24 +212,24 @@
             <div class="card" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="200">
     <div class="card-img">
         <img src="Image/work1.jpg" alt="">
-        <div class="overlay-text">Project 1: Description goes here</div>
+        <div class="overlay-text">ASCII Cam : App that provides live camera feedback in ASCII video</div>
     </div>
 </div>
 
 <div class="card" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
     <div class="card-img">
         <img src="Image/work2.jpg" alt="">
-        <div class="overlay-text">Project 2: Description goes here</div>
+        <div class="overlay-text">Bubble Shooter : A game made with vanilla javascript</div>
     </div>
 </div>
             <div class="card" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="200">
     <div class="card-img">
         <img src="Image/work3.jpg" alt="">
-        <div class="overlay-text">Project 3: Description goes here</div>
+        <div class="overlay-text">Space Wars : A game made using vanilla javascript</div>
     </div>
 </div>
 
-<div class="card" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="400">
+<!-- <div class="card" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="400">
     <div class="card-img">
         <img src="Image/work4.jpg" alt="">
         <div class="overlay-text">Project 4: Description goes here</div>
@@ -248,7 +248,7 @@
         <img src="Image/work6.jpg" alt="">
         <div class="overlay-text">Project 6: Description goes here</div>
     </div>
-</div>
+</div> -->
 
 
 
