--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             </div>
             <a href="#services" class="btn" data-aos="zoom-out" data-aos-duration="1000" data-aos-delay="1000">See My Work</a>
             <div class="media-icons">
-                <a href="#" data-aos="fade-in" data-aos-duration="1000" data-aos-delay="1200"><i class="fab fa-linkedin"></i></a>
-                <a href="#" data-aos="fade-in" data-aos-duration="1000" data-aos-delay="1300"><i class="fab fa-instagram"></i></a>
-                <a href="#" data-aos="fade-in" data-aos-duration="1000" data-aos-delay="1500"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/kaladharan-lal/" data-aos="fade-in" data-aos-duration="1000" data-aos-delay="1200"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.instagram.com/kaladharan_lal/" data-aos="fade-in" data-aos-duration="1000" data-aos-delay="1300"><i class="fab fa-instagram"></i></a>
+                <a href="https://github.com/KaladharanLal" data-aos="fade-in" data-aos-duration="1000" data-aos-delay="1500"><i class="fab fa-github"></i></a>
             </div>
         </div>
     </section>
@@ -97,36 +97,7 @@
                 <div class="paragraph-text" data-aos="flip-down" data-aos-duration="1000" data-aos-delay="300">I am a dedicated Electronics and Electrical Engineering student with hands-on experience in both software development and hardware systems. I’ve built a variety of projects — including Python utilities (like ASCII image generation), dynamic web and game experiences (2D games, interactive simulations), embedded systems with Arduino and ESP32, and experimental modules in PCB design and sensors. My GitHub showcases a blend of creative programming (Python, HTML/CSS/JS) and practical engineering solutions, reflecting a strong foundation in electronics, microcontrollers, and full-stack problem solving. As an active leader in technical societies like ISTE and IETE at NSSCE, I’ve honed teamwork, project direction, and community engagement — driving initiatives and collaborating on multidisciplinary challenges.</div>
                 <a href="#" class="btn" data-aos="zoom-in-right" data-aos-duration="1000" data-aos-delay="400">See more</a>
             </div>
-            <div class="column col-right">
-                <div class="bar">
-                    <div class="info" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="100">
-                        <span>HTML</span>
-                        <span>95%</span>
-                    </div>
-                    <div class="line html" data-aos="zoom-in-right" data-aos-duration="1000" data-aos-delay="140"></div>
-                </div>
-                <div class="bar">
-                    <div class="info" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="200">
-                        <span>CSS</span>
-                        <span>90%</span>
-                    </div>
-                    <div class="line css" data-aos="zoom-in-right" data-aos-duration="1000" data-aos-delay="240"></div>
-                </div>
-                <div class="bar">
-                    <div class="info" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="300">
-                        <span>Javascript</span>
-                        <span>80%</span>
-                    </div>
-                    <div class="line javascript" data-aos="zoom-in-right" data-aos-duration="1000" data-aos-delay="340"></div>
-                </div>
-                <div class="bar">
-                    <div class="info" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="400">
-                        <span>Python</span>
-                        <span>85%</span>
-                    </div>
-                    <div class="line python" data-aos="zoom-in-right" data-aos-duration="1000" data-aos-delay="440"></div>
-                </div>
-            </div>
+            <img src="Image/project.jpg" width="30%">
         </div>
     </section>
 
